// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hug renders text when array of nodes is provided 1`] = `
<DocumentFragment>
  .c6 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-bottom: 2px;
  margin-right: 8px;
  width: 24px;
}

.c7 {
  outline: none;
}

.c1 {
  background-color: #fff;
  color: #001833;
  border-radius: 16px;
}

.c4 {
  background-color: #fff;
  color: #001833;
  padding: 8px;
  padding-left: 12px;
}

.c11 {
  background-color: #fff;
  color: #001833;
  border-radius: 2px;
  padding: 16px;
}

.c2 {
  border-color: #fff;
  border-color: text.lightest;
  border-radius: 16px;
  border-style: solid;
  border-width: 1px;
}

.c12 {
  border-color: #c0cad5;
  border-color: #c0cad5;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
}

.c8 {
  font-size: 14px;
}

.c9 {
  font-weight: 700;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  overflow: hidden;
}

.c10 > * {
  border: 0 !important;
}

<div
    class="c0"
  >
    <div
      class="c1 c2 c3"
      color="text.lightest"
    >
      <div
        class="c4 c5 "
        color="text.lightest"
      >
        <svg
          aria-hidden="true"
          class="c6 c7"
          fill="currentcolor"
          focusable="false"
          height="24"
          role="img"
          size="24"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 20h3.3v-9.6H3V20zm18-8.8c0-.9-.7-1.6-1.6-1.6h-5.2l.8-3.7v-.2c0-.3-.2-.6-.3-.9l-.9-.8-5.4 5.3c-.3.2-.5.6-.5 1.1v8c0 .9.7 1.6 1.6 1.6h7.4c.7 0 1.2-.4 1.5-1l2.5-5.7c.1-.1.1-.3.1-.5v-1.6z"
          />
        </svg>
        <div
          class="c8"
          font-size="1"
        >
          <span
            class=""
          >
            Have you seen this 
            <span
              class="c9"
            >
              card
            </span>
             I&ampls;m hugging?!
          </span>
          <span
            class=""
          >
            Have you seen this 
            <span
              class="c9"
            >
              card
            </span>
             I&ampls;m hugging?!
          </span>
        </div>
      </div>
      <div
        class="c10"
      >
        <div
          class="c11 c12"
          color="text"
        >
          I'm a card within a hug!
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Hug renders text when string is provided 1`] = `
<DocumentFragment>
  .c6 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-bottom: 2px;
  margin-right: 8px;
  width: 24px;
}

.c7 {
  outline: none;
}

.c1 {
  background-color: #fff;
  color: #001833;
  border-radius: 16px;
}

.c4 {
  background-color: #fff;
  color: #001833;
  padding: 8px;
  padding-left: 12px;
}

.c10 {
  background-color: #fff;
  color: #001833;
  border-radius: 2px;
  padding: 16px;
}

.c2 {
  border-color: #fff;
  border-color: text.lightest;
  border-radius: 16px;
  border-style: solid;
  border-width: 1px;
}

.c11 {
  border-color: #c0cad5;
  border-color: #c0cad5;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
}

.c8 {
  font-size: 14px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  overflow: hidden;
}

.c9 > * {
  border: 0 !important;
}

<div
    class="c0"
  >
    <div
      class="c1 c2 c3"
      color="text.lightest"
    >
      <div
        class="c4 c5 "
        color="text.lightest"
      >
        <svg
          aria-hidden="true"
          class="c6 c7"
          fill="currentcolor"
          focusable="false"
          height="24"
          role="img"
          size="24"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 20h3.3v-9.6H3V20zm18-8.8c0-.9-.7-1.6-1.6-1.6h-5.2l.8-3.7v-.2c0-.3-.2-.6-.3-.9l-.9-.8-5.4 5.3c-.3.2-.5.6-.5 1.1v8c0 .9.7 1.6 1.6 1.6h7.4c.7 0 1.2-.4 1.5-1l2.5-5.7c.1-.1.1-.3.1-.5v-1.6z"
          />
        </svg>
        <div
          class="c8"
          font-size="1"
        >
          I've been known to hug a card from time to time
        </div>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10 c11"
          color="text"
        >
          I'm a card within a hug!
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Hug renders text, icon, and Child 1`] = `
<DocumentFragment>
  .c6 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-bottom: 2px;
  margin-right: 8px;
  width: 24px;
}

.c7 {
  outline: none;
}

.c1 {
  background-color: #fff;
  color: #001833;
  border-radius: 16px;
}

.c4 {
  background-color: #fff;
  color: #001833;
  padding: 8px;
  padding-left: 12px;
}

.c11 {
  background-color: #fff;
  color: #001833;
  border-radius: 2px;
  padding: 16px;
}

.c2 {
  border-color: #fff;
  border-color: text.lightest;
  border-radius: 16px;
  border-style: solid;
  border-width: 1px;
}

.c12 {
  border-color: #c0cad5;
  border-color: #c0cad5;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
}

.c8 {
  font-size: 14px;
}

.c9 {
  font-weight: 700;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  overflow: hidden;
}

.c10 > * {
  border: 0 !important;
}

<div
    class="c0"
  >
    <div
      class="c1 c2 c3"
      color="text.lightest"
    >
      <div
        class="c4 c5 "
        color="text.lightest"
      >
        <svg
          aria-hidden="true"
          class="c6 c7"
          fill="currentcolor"
          focusable="false"
          height="24"
          role="img"
          size="24"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 20h3.3v-9.6H3V20zm18-8.8c0-.9-.7-1.6-1.6-1.6h-5.2l.8-3.7v-.2c0-.3-.2-.6-.3-.9l-.9-.8-5.4 5.3c-.3.2-.5.6-.5 1.1v8c0 .9.7 1.6 1.6 1.6h7.4c.7 0 1.2-.4 1.5-1l2.5-5.7c.1-.1.1-.3.1-.5v-1.6z"
          />
        </svg>
        <div
          class="c8"
          font-size="1"
        >
          <span
            class=""
          >
            Have you seen this 
            <span
              class="c9"
            >
              card
            </span>
             I&ampls;m hugging?!
          </span>
        </div>
      </div>
      <div
        class="c10"
      >
        <div
          class="c11 c12"
          color="text"
        >
          I'm a card within a hug!
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
